# google-admin-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/codeql/: codeql-rust.yml
.github/codeql/actions-workflow-security/: WorkflowSecurity.qll
.github/workflows/: code-coverage.yml  codeql.yml  dependency-governance.yml  rust-validation.yml
docs/: GETTING_STARTED.md  SECURITY_MODEL.md  TOOL_GUIDE.md
scripts/: dependency_governance_check.sh
src/: config.rs  contract.rs  error.rs  google_api.rs  google_cli.rs  lib.rs  main.rs  server.rs  tool_surface.rs  tools.rs
