[package]
name = "google-admin-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Local Google auth inspection and verification MCP server."
repository = "https://github.com/sednalabs/google-admin-mcp"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
mcp-toolkit-core = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "1cf322071d84e27fe3002ee53198353af0ea6513", package = "mcp-toolkit-core" }
mcp-toolkit-observability = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "1cf322071d84e27fe3002ee53198353af0ea6513", package = "mcp-toolkit-observability", features = ["tracing-bridge"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "http2", "query", "rustls"] }
rmcp = { version = "1.2.0", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "process", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.25.0"
